parser.output
Terminals unused in grammar

   MINUS_MINUS
   PLUS


State 119 conflicts: 8 shift/reduce
State 121 conflicts: 8 shift/reduce
State 122 conflicts: 8 shift/reduce
State 123 conflicts: 8 shift/reduce
State 124 conflicts: 8 shift/reduce
State 125 conflicts: 8 shift/reduce
State 126 conflicts: 8 shift/reduce
State 127 conflicts: 8 shift/reduce
State 149 conflicts: 8 shift/reduce
State 177 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: declarations

    2 $@1: %empty

    3 declarations: declaration $@1 declarations
    4             | %empty

    5 declaration: CLASS IDENTIFIER LBRACE declarations RBRACE
    6            | INT_TYPE IDENTIFIER ASSIGN expression SEMICOLON
    7            | STRING_TYPE IDENTIFIER ASSIGN STRING_LITERAL SEMICOLON
    8            | FLOAT_TYPE IDENTIFIER ASSIGN FLOAT_LITERAL SEMICOLON
    9            | DOUBLE_TYPE IDENTIFIER ASSIGN FLOAT_LITERAL SEMICOLON
   10            | BOOLEAN_TYPE IDENTIFIER ASSIGN BOOLEAN_LITERAL SEMICOLON
   11            | CHAR_TYPE IDENTIFIER ASSIGN STRING_LITERAL SEMICOLON
   12            | IF_TYPE LPARENTHESES condition RPARENTHESES LBRACE declarations RBRACE
   13            | ELSE_IF LPARENTHESES condition RPARENTHESES LBRACE declarations RBRACE
   14            | ELSE_TYPE LBRACE declarations RBRACE
   15            | WHILE_TYPE LPARENTHESES condition RPARENTHESES LBRACE declarations RBRACE
   16            | SYSTEM DOT OUT DOT PRINTLN LPARENTHESES STRING_LITERAL RPARENTHESES SEMICOLON
   17            | method_definition
   18            | for_loop

   19 for_loop: FOR_TYPE LPARENTHESES INT_TYPE IDENTIFIER ASSIGN NUMBER_LITERAL SEMICOLON condition SEMICOLON IDENTIFIER PLUS_PLUS RPARENTHESES LBRACE statement RBRACE

   20 condition: IDENTIFIER EQUAL NUMBER_LITERAL
   21          | IDENTIFIER GREATER NUMBER_LITERAL
   22          | IDENTIFIER LESS NUMBER_LITERAL
   23          | IDENTIFIER GREATER_EQUAL NUMBER_LITERAL
   24          | IDENTIFIER LESS_EQUAL NUMBER_LITERAL
   25          | IDENTIFIER AND NUMBER_LITERAL
   26          | IDENTIFIER OR NUMBER_LITERAL

   27 expression: NUMBER_LITERAL
   28           | IDENTIFIER
   29           | STRING_LITERAL
   30           | FLOAT_LITERAL
   31           | DOUBLE_LITERAL
   32           | BOOLEAN_LITERAL
   33           | IDENTIFIER ASSIGN expression
   34           | LPARENTHESES expression RPARENTHESES
   35           | expression QUESTION expression COLON expression
   36           | expression GREATER expression
   37           | expression LESS expression
   38           | expression EQUAL expression
   39           | expression GREATER_EQUAL expression
   40           | expression LESS_EQUAL expression
   41           | expression AND expression
   42           | expression OR expression

   43 method_definition: access_modifier VOID IDENTIFIER LPARENTHESES parameters RPARENTHESES LBRACE method_body RBRACE

   44 access_modifier: PUBLIC
   45                | PRIVATE
   46                | PROTECTED

   47 parameters: %empty
   48           | parameter
   49           | parameters COMMA parameter

   50 parameter: INT_TYPE IDENTIFIER
   51          | STRING_TYPE IDENTIFIER
   52          | FLOAT_TYPE IDENTIFIER
   53          | DOUBLE_TYPE IDENTIFIER
   54          | BOOLEAN_TYPE IDENTIFIER

   55 method_body: declarations
   56            | statement

   57 statement: expression SEMICOLON
   58          | SYSTEM DOT OUT DOT PRINTLN LPARENTHESES STRING_LITERAL RPARENTHESES SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 5 6 7 8 9 10 11 19 20 21 22 23 24 25 26 28 33 43 50
    51 52 53 54
NUMBER_LITERAL (259) 19 20 21 22 23 24 25 26 27
STRING_LITERAL (260) 7 11 16 29 58
BOOLEAN_LITERAL (261) 10 32
FLOAT_LITERAL (262) 8 9 30
DOUBLE_LITERAL (263) 31
PUBLIC (264) 44
PRIVATE (265) 45
VOID (266) 43
CLASS (267) 5
INT_TYPE (268) 6 19 50
STRING_TYPE (269) 7 51
FLOAT_TYPE (270) 8 52
DOUBLE_TYPE (271) 9 53
BOOLEAN_TYPE (272) 10 54
CHAR_TYPE (273) 11
ASSIGN (274) 6 7 8 9 10 11 19 33
EQUAL (275) 20 38
COLON (276) 35
SEMICOLON (277) 6 7 8 9 10 11 16 19 57 58
IF_TYPE (278) 12
ELSE_TYPE (279) 14
ELSE_IF (280) 13
WHILE_TYPE (281) 15
FOR_TYPE (282) 19
LBRACE (283) 5 12 13 14 15 19 43
RBRACE (284) 5 12 13 14 15 19 43
LPARENTHESES (285) 12 13 15 16 19 34 43 58
RPARENTHESES (286) 12 13 15 16 19 34 43 58
PLUS_PLUS (287) 19
MINUS_MINUS (288)
DOT (289) 16 58
SYSTEM (290) 16 58
OUT (291) 16 58
PRINTLN (292) 16 58
COMMA (293) 49
PLUS (294)
PROTECTED (295) 46
GREATER (296) 21 36
LESS (297) 22 37
GREATER_EQUAL (298) 23 39
LESS_EQUAL (299) 24 40
AND (300) 25 41
OR (301) 26 42
QUESTION (302) 35


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declarations (50)
    on left: 3 4, on right: 1 3 5 12 13 14 15 55
$@1 (51)
    on left: 2, on right: 3
declaration (52)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 3
for_loop (53)
    on left: 19, on right: 18
condition (54)
    on left: 20 21 22 23 24 25 26, on right: 12 13 15 19
expression (55)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right:
    6 33 34 35 36 37 38 39 40 41 42 57
method_definition (56)
    on left: 43, on right: 17
access_modifier (57)
    on left: 44 45 46, on right: 43
parameters (58)
    on left: 47 48 49, on right: 43 49
parameter (59)
    on left: 50 51 52 53 54, on right: 48 49
method_body (60)
    on left: 55 56, on right: 43
statement (61)
    on left: 57 58, on right: 19 56


State 0

    0 $accept: . program $end

    PUBLIC        shift, and go to state 1
    PRIVATE       shift, and go to state 2
    CLASS         shift, and go to state 3
    INT_TYPE      shift, and go to state 4
    STRING_TYPE   shift, and go to state 5
    FLOAT_TYPE    shift, and go to state 6
    DOUBLE_TYPE   shift, and go to state 7
    BOOLEAN_TYPE  shift, and go to state 8
    CHAR_TYPE     shift, and go to state 9
    IF_TYPE       shift, and go to state 10
    ELSE_TYPE     shift, and go to state 11
    ELSE_IF       shift, and go to state 12
    WHILE_TYPE    shift, and go to state 13
    FOR_TYPE      shift, and go to state 14
    SYSTEM        shift, and go to state 15
    PROTECTED     shift, and go to state 16

    $default  reduce using rule 4 (declarations)

    program            go to state 17
    declarations       go to state 18
    declaration        go to state 19
    for_loop           go to state 20
    method_definition  go to state 21
    access_modifier    go to state 22


State 1

   44 access_modifier: PUBLIC .

    $default  reduce using rule 44 (access_modifier)


State 2

   45 access_modifier: PRIVATE .

    $default  reduce using rule 45 (access_modifier)


State 3

    5 declaration: CLASS . IDENTIFIER LBRACE declarations RBRACE

    IDENTIFIER  shift, and go to state 23


State 4

    6 declaration: INT_TYPE . IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER  shift, and go to state 24


State 5

    7 declaration: STRING_TYPE . IDENTIFIER ASSIGN STRING_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 25


State 6

    8 declaration: FLOAT_TYPE . IDENTIFIER ASSIGN FLOAT_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 26


State 7

    9 declaration: DOUBLE_TYPE . IDENTIFIER ASSIGN FLOAT_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 27


State 8

   10 declaration: BOOLEAN_TYPE . IDENTIFIER ASSIGN BOOLEAN_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 28


State 9

   11 declaration: CHAR_TYPE . IDENTIFIER ASSIGN STRING_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 29


State 10

   12 declaration: IF_TYPE . LPARENTHESES condition RPARENTHESES LBRACE declarations RBRACE

    LPARENTHESES  shift, and go to state 30


State 11

   14 declaration: ELSE_TYPE . LBRACE declarations RBRACE

    LBRACE  shift, and go to state 31


State 12

   13 declaration: ELSE_IF . LPARENTHESES condition RPARENTHESES LBRACE declarations RBRACE

    LPARENTHESES  shift, and go to state 32


State 13

   15 declaration: WHILE_TYPE . LPARENTHESES condition RPARENTHESES LBRACE declarations RBRACE

    LPARENTHESES  shift, and go to state 33


State 14

   19 for_loop: FOR_TYPE . LPARENTHESES INT_TYPE IDENTIFIER ASSIGN NUMBER_LITERAL SEMICOLON condition SEMICOLON IDENTIFIER PLUS_PLUS RPARENTHESES LBRACE statement RBRACE

    LPARENTHESES  shift, and go to state 34


State 15

   16 declaration: SYSTEM . DOT OUT DOT PRINTLN LPARENTHESES STRING_LITERAL RPARENTHESES SEMICOLON

    DOT  shift, and go to state 35


State 16

   46 access_modifier: PROTECTED .

    $default  reduce using rule 46 (access_modifier)


State 17

    0 $accept: program . $end

    $end  shift, and go to state 36


State 18

    1 program: declarations .

    $default  reduce using rule 1 (program)


State 19

    3 declarations: declaration . $@1 declarations

    $default  reduce using rule 2 ($@1)

    $@1  go to state 37


State 20

   18 declaration: for_loop .

    $default  reduce using rule 18 (declaration)


State 21

   17 declaration: method_definition .

    $default  reduce using rule 17 (declaration)


State 22

   43 method_definition: access_modifier . VOID IDENTIFIER LPARENTHESES parameters RPARENTHESES LBRACE method_body RBRACE

    VOID  shift, and go to state 38


State 23

    5 declaration: CLASS IDENTIFIER . LBRACE declarations RBRACE

    LBRACE  shift, and go to state 39


State 24

    6 declaration: INT_TYPE IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 40


State 25

    7 declaration: STRING_TYPE IDENTIFIER . ASSIGN STRING_LITERAL SEMICOLON

    ASSIGN  shift, and go to state 41


State 26

    8 declaration: FLOAT_TYPE IDENTIFIER . ASSIGN FLOAT_LITERAL SEMICOLON

    ASSIGN  shift, and go to state 42


State 27

    9 declaration: DOUBLE_TYPE IDENTIFIER . ASSIGN FLOAT_LITERAL SEMICOLON

    ASSIGN  shift, and go to state 43


State 28

   10 declaration: BOOLEAN_TYPE IDENTIFIER . ASSIGN BOOLEAN_LITERAL SEMICOLON

    ASSIGN  shift, and go to state 44


State 29

   11 declaration: CHAR_TYPE IDENTIFIER . ASSIGN STRING_LITERAL SEMICOLON

    ASSIGN  shift, and go to state 45


State 30

   12 declaration: IF_TYPE LPARENTHESES . condition RPARENTHESES LBRACE declarations RBRACE

    IDENTIFIER  shift, and go to state 46

    condition  go to state 47


State 31

   14 declaration: ELSE_TYPE LBRACE . declarations RBRACE

    PUBLIC        shift, and go to state 1
    PRIVATE       shift, and go to state 2
    CLASS         shift, and go to state 3
    INT_TYPE      shift, and go to state 4
    STRING_TYPE   shift, and go to state 5
    FLOAT_TYPE    shift, and go to state 6
    DOUBLE_TYPE   shift, and go to state 7
    BOOLEAN_TYPE  shift, and go to state 8
    CHAR_TYPE     shift, and go to state 9
    IF_TYPE       shift, and go to state 10
    ELSE_TYPE     shift, and go to state 11
    ELSE_IF       shift, and go to state 12
    WHILE_TYPE    shift, and go to state 13
    FOR_TYPE      shift, and go to state 14
    SYSTEM        shift, and go to state 15
    PROTECTED     shift, and go to state 16

    $default  reduce using rule 4 (declarations)

    declarations       go to state 48
    declaration        go to state 19
    for_loop           go to state 20
    method_definition  go to state 21
    access_modifier    go to state 22


State 32

   13 declaration: ELSE_IF LPARENTHESES . condition RPARENTHESES LBRACE declarations RBRACE

    IDENTIFIER  shift, and go to state 46

    condition  go to state 49


State 33

   15 declaration: WHILE_TYPE LPARENTHESES . condition RPARENTHESES LBRACE declarations RBRACE

    IDENTIFIER  shift, and go to state 46

    condition  go to state 50


State 34

   19 for_loop: FOR_TYPE LPARENTHESES . INT_TYPE IDENTIFIER ASSIGN NUMBER_LITERAL SEMICOLON condition SEMICOLON IDENTIFIER PLUS_PLUS RPARENTHESES LBRACE statement RBRACE

    INT_TYPE  shift, and go to state 51


State 35

   16 declaration: SYSTEM DOT . OUT DOT PRINTLN LPARENTHESES STRING_LITERAL RPARENTHESES SEMICOLON

    OUT  shift, and go to state 52


State 36

    0 $accept: program $end .

    $default  accept


State 37

    3 declarations: declaration $@1 . declarations

    PUBLIC        shift, and go to state 1
    PRIVATE       shift, and go to state 2
    CLASS         shift, and go to state 3
    INT_TYPE      shift, and go to state 4
    STRING_TYPE   shift, and go to state 5
    FLOAT_TYPE    shift, and go to state 6
    DOUBLE_TYPE   shift, and go to state 7
    BOOLEAN_TYPE  shift, and go to state 8
    CHAR_TYPE     shift, and go to state 9
    IF_TYPE       shift, and go to state 10
    ELSE_TYPE     shift, and go to state 11
    ELSE_IF       shift, and go to state 12
    WHILE_TYPE    shift, and go to state 13
    FOR_TYPE      shift, and go to state 14
    SYSTEM        shift, and go to state 15
    PROTECTED     shift, and go to state 16

    $default  reduce using rule 4 (declarations)

    declarations       go to state 53
    declaration        go to state 19
    for_loop           go to state 20
    method_definition  go to state 21
    access_modifier    go to state 22


State 38

   43 method_definition: access_modifier VOID . IDENTIFIER LPARENTHESES parameters RPARENTHESES LBRACE method_body RBRACE

    IDENTIFIER  shift, and go to state 54


State 39

    5 declaration: CLASS IDENTIFIER LBRACE . declarations RBRACE

    PUBLIC        shift, and go to state 1
    PRIVATE       shift, and go to state 2
    CLASS         shift, and go to state 3
    INT_TYPE      shift, and go to state 4
    STRING_TYPE   shift, and go to state 5
    FLOAT_TYPE    shift, and go to state 6
    DOUBLE_TYPE   shift, and go to state 7
    BOOLEAN_TYPE  shift, and go to state 8
    CHAR_TYPE     shift, and go to state 9
    IF_TYPE       shift, and go to state 10
    ELSE_TYPE     shift, and go to state 11
    ELSE_IF       shift, and go to state 12
    WHILE_TYPE    shift, and go to state 13
    FOR_TYPE      shift, and go to state 14
    SYSTEM        shift, and go to state 15
    PROTECTED     shift, and go to state 16

    $default  reduce using rule 4 (declarations)

    declarations       go to state 55
    declaration        go to state 19
    for_loop           go to state 20
    method_definition  go to state 21
    access_modifier    go to state 22


State 40

    6 declaration: INT_TYPE IDENTIFIER ASSIGN . expression SEMICOLON

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 63


State 41

    7 declaration: STRING_TYPE IDENTIFIER ASSIGN . STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift, and go to state 64


State 42

    8 declaration: FLOAT_TYPE IDENTIFIER ASSIGN . FLOAT_LITERAL SEMICOLON

    FLOAT_LITERAL  shift, and go to state 65


State 43

    9 declaration: DOUBLE_TYPE IDENTIFIER ASSIGN . FLOAT_LITERAL SEMICOLON

    FLOAT_LITERAL  shift, and go to state 66


State 44

   10 declaration: BOOLEAN_TYPE IDENTIFIER ASSIGN . BOOLEAN_LITERAL SEMICOLON

    BOOLEAN_LITERAL  shift, and go to state 67


State 45

   11 declaration: CHAR_TYPE IDENTIFIER ASSIGN . STRING_LITERAL SEMICOLON

    STRING_LITERAL  shift, and go to state 68


State 46

   20 condition: IDENTIFIER . EQUAL NUMBER_LITERAL
   21          | IDENTIFIER . GREATER NUMBER_LITERAL
   22          | IDENTIFIER . LESS NUMBER_LITERAL
   23          | IDENTIFIER . GREATER_EQUAL NUMBER_LITERAL
   24          | IDENTIFIER . LESS_EQUAL NUMBER_LITERAL
   25          | IDENTIFIER . AND NUMBER_LITERAL
   26          | IDENTIFIER . OR NUMBER_LITERAL

    EQUAL          shift, and go to state 69
    GREATER        shift, and go to state 70
    LESS           shift, and go to state 71
    GREATER_EQUAL  shift, and go to state 72
    LESS_EQUAL     shift, and go to state 73
    AND            shift, and go to state 74
    OR             shift, and go to state 75


State 47

   12 declaration: IF_TYPE LPARENTHESES condition . RPARENTHESES LBRACE declarations RBRACE

    RPARENTHESES  shift, and go to state 76


State 48

   14 declaration: ELSE_TYPE LBRACE declarations . RBRACE

    RBRACE  shift, and go to state 77


State 49

   13 declaration: ELSE_IF LPARENTHESES condition . RPARENTHESES LBRACE declarations RBRACE

    RPARENTHESES  shift, and go to state 78


State 50

   15 declaration: WHILE_TYPE LPARENTHESES condition . RPARENTHESES LBRACE declarations RBRACE

    RPARENTHESES  shift, and go to state 79


State 51

   19 for_loop: FOR_TYPE LPARENTHESES INT_TYPE . IDENTIFIER ASSIGN NUMBER_LITERAL SEMICOLON condition SEMICOLON IDENTIFIER PLUS_PLUS RPARENTHESES LBRACE statement RBRACE

    IDENTIFIER  shift, and go to state 80


State 52

   16 declaration: SYSTEM DOT OUT . DOT PRINTLN LPARENTHESES STRING_LITERAL RPARENTHESES SEMICOLON

    DOT  shift, and go to state 81


State 53

    3 declarations: declaration $@1 declarations .

    $default  reduce using rule 3 (declarations)


State 54

   43 method_definition: access_modifier VOID IDENTIFIER . LPARENTHESES parameters RPARENTHESES LBRACE method_body RBRACE

    LPARENTHESES  shift, and go to state 82


State 55

    5 declaration: CLASS IDENTIFIER LBRACE declarations . RBRACE

    RBRACE  shift, and go to state 83


State 56

   28 expression: IDENTIFIER .
   33           | IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 28 (expression)


State 57

   27 expression: NUMBER_LITERAL .

    $default  reduce using rule 27 (expression)


State 58

   29 expression: STRING_LITERAL .

    $default  reduce using rule 29 (expression)


State 59

   32 expression: BOOLEAN_LITERAL .

    $default  reduce using rule 32 (expression)


State 60

   30 expression: FLOAT_LITERAL .

    $default  reduce using rule 30 (expression)


State 61

   31 expression: DOUBLE_LITERAL .

    $default  reduce using rule 31 (expression)


State 62

   34 expression: LPARENTHESES . expression RPARENTHESES

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 85


State 63

    6 declaration: INT_TYPE IDENTIFIER ASSIGN expression . SEMICOLON
   35 expression: expression . QUESTION expression COLON expression
   36           | expression . GREATER expression
   37           | expression . LESS expression
   38           | expression . EQUAL expression
   39           | expression . GREATER_EQUAL expression
   40           | expression . LESS_EQUAL expression
   41           | expression . AND expression
   42           | expression . OR expression

    EQUAL          shift, and go to state 86
    SEMICOLON      shift, and go to state 87
    GREATER        shift, and go to state 88
    LESS           shift, and go to state 89
    GREATER_EQUAL  shift, and go to state 90
    LESS_EQUAL     shift, and go to state 91
    AND            shift, and go to state 92
    OR             shift, and go to state 93
    QUESTION       shift, and go to state 94


State 64

    7 declaration: STRING_TYPE IDENTIFIER ASSIGN STRING_LITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 95


State 65

    8 declaration: FLOAT_TYPE IDENTIFIER ASSIGN FLOAT_LITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 96


State 66

    9 declaration: DOUBLE_TYPE IDENTIFIER ASSIGN FLOAT_LITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 97


State 67

   10 declaration: BOOLEAN_TYPE IDENTIFIER ASSIGN BOOLEAN_LITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 98


State 68

   11 declaration: CHAR_TYPE IDENTIFIER ASSIGN STRING_LITERAL . SEMICOLON

    SEMICOLON  shift, and go to state 99


State 69

   20 condition: IDENTIFIER EQUAL . NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 100


State 70

   21 condition: IDENTIFIER GREATER . NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 101


State 71

   22 condition: IDENTIFIER LESS . NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 102


State 72

   23 condition: IDENTIFIER GREATER_EQUAL . NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 103


State 73

   24 condition: IDENTIFIER LESS_EQUAL . NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 104


State 74

   25 condition: IDENTIFIER AND . NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 105


State 75

   26 condition: IDENTIFIER OR . NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 106


State 76

   12 declaration: IF_TYPE LPARENTHESES condition RPARENTHESES . LBRACE declarations RBRACE

    LBRACE  shift, and go to state 107


State 77

   14 declaration: ELSE_TYPE LBRACE declarations RBRACE .

    $default  reduce using rule 14 (declaration)


State 78

   13 declaration: ELSE_IF LPARENTHESES condition RPARENTHESES . LBRACE declarations RBRACE

    LBRACE  shift, and go to state 108


State 79

   15 declaration: WHILE_TYPE LPARENTHESES condition RPARENTHESES . LBRACE declarations RBRACE

    LBRACE  shift, and go to state 109


State 80

   19 for_loop: FOR_TYPE LPARENTHESES INT_TYPE IDENTIFIER . ASSIGN NUMBER_LITERAL SEMICOLON condition SEMICOLON IDENTIFIER PLUS_PLUS RPARENTHESES LBRACE statement RBRACE

    ASSIGN  shift, and go to state 110


State 81

   16 declaration: SYSTEM DOT OUT DOT . PRINTLN LPARENTHESES STRING_LITERAL RPARENTHESES SEMICOLON

    PRINTLN  shift, and go to state 111


State 82

   43 method_definition: access_modifier VOID IDENTIFIER LPARENTHESES . parameters RPARENTHESES LBRACE method_body RBRACE

    INT_TYPE      shift, and go to state 112
    STRING_TYPE   shift, and go to state 113
    FLOAT_TYPE    shift, and go to state 114
    DOUBLE_TYPE   shift, and go to state 115
    BOOLEAN_TYPE  shift, and go to state 116

    $default  reduce using rule 47 (parameters)

    parameters  go to state 117
    parameter   go to state 118


State 83

    5 declaration: CLASS IDENTIFIER LBRACE declarations RBRACE .

    $default  reduce using rule 5 (declaration)


State 84

   33 expression: IDENTIFIER ASSIGN . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 119


State 85

   34 expression: LPARENTHESES expression . RPARENTHESES
   35           | expression . QUESTION expression COLON expression
   36           | expression . GREATER expression
   37           | expression . LESS expression
   38           | expression . EQUAL expression
   39           | expression . GREATER_EQUAL expression
   40           | expression . LESS_EQUAL expression
   41           | expression . AND expression
   42           | expression . OR expression

    EQUAL          shift, and go to state 86
    RPARENTHESES   shift, and go to state 120
    GREATER        shift, and go to state 88
    LESS           shift, and go to state 89
    GREATER_EQUAL  shift, and go to state 90
    LESS_EQUAL     shift, and go to state 91
    AND            shift, and go to state 92
    OR             shift, and go to state 93
    QUESTION       shift, and go to state 94


State 86

   38 expression: expression EQUAL . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 121


State 87

    6 declaration: INT_TYPE IDENTIFIER ASSIGN expression SEMICOLON .

    $default  reduce using rule 6 (declaration)


State 88

   36 expression: expression GREATER . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 122


State 89

   37 expression: expression LESS . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 123


State 90

   39 expression: expression GREATER_EQUAL . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 124


State 91

   40 expression: expression LESS_EQUAL . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 125


State 92

   41 expression: expression AND . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 126


State 93

   42 expression: expression OR . expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 127


State 94

   35 expression: expression QUESTION . expression COLON expression

    IDENTIFIER       shift, and go to state 56
    NUMBER_LITERAL   shift, and go to state 57
    STRING_LITERAL   shift, and go to state 58
    BOOLEAN_LITERAL  shift, and go to state 59
    FLOAT_LITERAL    shift, and go to state 60
    DOUBLE_LITERAL   shift, and go to state 61
    LPARENTHESES     shift, and go to state 62

    expression  go to state 128


State 95

    7 declaration: STRING_TYPE IDENTIFIER ASSIGN STRING_LITERAL SEMICOLON .

    $default  reduce using rule 7 (declaration)


State 96

    8 declaration: FLOAT_TYPE IDENTIFIER ASSIGN FLOAT_LITERAL SEMICOLON .

    $default  reduce using rule 8 (declaration)


State 97

    9 declaration: DOUBLE_TYPE IDENTIFIER ASSIGN FLOAT_LITERAL SEMICOLON .

    $default  reduce using rule 9 (declaration)


State 98

   10 declaration: BOOLEAN_TYPE IDENTIFIER ASSIGN BOOLEAN_LITERAL SEMICOLON .

    $default  reduce using rule 10 (declaration)


State 99

   11 declaration: CHAR_TYPE IDENTIFIER ASSIGN STRING_LITERAL SEMICOLON .

    $default  reduce using rule 11 (declaration)


State 100

   20 condition: IDENTIFIER EQUAL NUMBER_LITERAL .

    $default  reduce using rule 20 (condition)


State 101

   21 condition: IDENTIFIER GREATER NUMBER_LITERAL .

    $default  reduce using rule 21 (condition)


State 102

   22 condition: IDENTIFIER LESS NUMBER_LITERAL .

    $default  reduce using rule 22 (condition)


State 103

   23 condition: IDENTIFIER GREATER_EQUAL NUMBER_LITERAL .

    $default  reduce using rule 23 (condition)


State 104

   24 condition: IDENTIFIER LESS_EQUAL NUMBER_LITERAL .

    $default  reduce using rule 24 (condition)


State 105

   25 condition: IDENTIFIER AND NUMBER_LITERAL .

    $default  reduce using rule 25 (condition)


State 106

   26 condition: IDENTIFIER OR NUMBER_LITERAL .

    $default  reduce using rule 26 (condition)


State 107

   12 declaration: IF_TYPE LPARENTHESES condition RPARENTHESES LBRACE . declarations RBRACE

    PUBLIC        shift, and go to state 1
    PRIVATE       shift, and go to state 2
    CLASS         shift, and go to state 3
    INT_TYPE      shift, and go to state 4
    STRING_TYPE   shift, and go to state 5
    FLOAT_TYPE    shift, and go to state 6
    DOUBLE_TYPE   shift, and go to state 7
    BOOLEAN_TYPE  shift, and go to state 8
    CHAR_TYPE     shift, and go to state 9
    IF_TYPE       shift, and go to state 10
    ELSE_TYPE     shift, and go to state 11
    ELSE_IF       shift, and go to state 12
    WHILE_TYPE    shift, and go to state 13
    FOR_TYPE      shift, and go to state 14
    SYSTEM        shift, and go to state 15
    PROTECTED     shift, and go to state 16

    $default  reduce using rule 4 (declarations)

    declarations       go to state 129
    declaration        go to state 19
    for_loop           go to state 20
    method_definition  go to state 21
    access_modifier    go to state 22


State 108

   13 declaration: ELSE_IF LPARENTHESES condition RPARENTHESES LBRACE . declarations RBRACE

    PUBLIC        shift, and go to state 1
    PRIVATE       shift, and go to state 2
    CLASS         shift, and go to state 3
    INT_TYPE      shift, and go to state 4
    STRING_TYPE   shift, and go to state 5
    FLOAT_TYPE    shift, and go to state 6
    DOUBLE_TYPE   shift, and go to state 7
    BOOLEAN_TYPE  shift, and go to state 8
    CHAR_TYPE     shift, and go to state 9
    IF_TYPE       shift, and go to state 10
    ELSE_TYPE     shift, and go to state 11
    ELSE_IF       shift, and go to state 12
    WHILE_TYPE    shift, and go to state 13
    FOR_TYPE      shift, and go to state 14
    SYSTEM        shift, and go to state 15
    PROTECTED     shift, and go to state 16

    $default  reduce using rule 4 (declarations)
